--- a/client/src/packages/ReactWindows/App/App.scss
+++ b/client/src/packages/ReactWindows/App/App.scss
@@ -1,3 +1,12 @@
+:root {
+  --deck-thickness: 90px;
+  --deck-height: 225px;
+  --deck-width: 150px;
+  --wide-background: repeating-linear-gradient(90deg, #6f6f6f, #bbbbbb 6px);
+  --thin-background: repeating-linear-gradient(#6f6f6f, #bbbbbb 6px);
+  --front-background: rgba(0, 0, 0, 1);
+}
+
 #app {
   text-align: center;
   height: 100%;
@@ -16,4 +25,8 @@ body {
   width: 100%;
   height: 100%;
   touch-action: none;
+}
+
+.not-allowed {
+  cursor: not-allowed !important;
 }
