--- a/client/src/packages/ReactWindows/App/App.scss
+++ b/client/src/packages/ReactWindows/App/App.scss
@@ -30,3 +30,11 @@ body {
 .not-allowed {
   cursor: not-allowed !important;
 }
+
+.full-block {
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
+}
