--- a/client/src/pages/Room/Room.scss
+++ b/client/src/pages/Room/Room.scss
@@ -2,10 +2,6 @@
   --bkgd-image: url(https://images.pexels.com/photos/101472/pexels-photo-101472.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 }
 
-#app {
-  background-image: var(--bkgd-image);
-}
-
 .main-background {
   background-image: var(--bkgd-image);
   background-position: center center;
@@ -54,4 +50,12 @@
     height: 60px;
     font-size: 18px;
   }
+}
+
+.full-block {
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
 }
