Add mute button for announcer

--- a/client/src/pages/Room/Room.scss
+++ b/client/src/pages/Room/Room.scss
@@ -6,6 +6,10 @@
   z-index: 10;
 }
 
+.mh10 {
+  margin: 0 10px;
+}
+
 .main-background {
   background-image: var(--bkgd-image);
   background-position: center center;
