Prompt name when entering room

--- a/client/src/packages/ReactWindows/Pages/Home/CreateWindow.scss
+++ b/client/src/packages/ReactWindows/Pages/Home/CreateWindow.scss
@@ -37,3 +37,8 @@
   border: 5px solid white;
   border-width: 5px !important;
 }
+
+.username-field {
+  background-color: white;
+  color: black;
+}
