--- a/client/src/packages/ReactWindows/Components/Containers/Windows/WindowContainer/WindowContainer.scss
+++ b/client/src/packages/ReactWindows/Components/Containers/Windows/WindowContainer/WindowContainer.scss
@@ -6,6 +6,9 @@ $indicatorActiveColor: #f90;
 $indicatorOffset: 0px;
 $indicatorSpan: calc(100% - 80px);
 
+.window-container {
+  overflow: hidden;
+}
 .indicator-center {
   content: "";
   background-color: #000000;
@@ -29,13 +32,15 @@ $indicatorSpan: calc(100% - 80px);
 .corner-indicator {
   pointer-events: none;
 
-  .v-line, .h-line{
+  .v-line,
+  .h-line {
     background-color: $indicatorColor;
     position: absolute;
   }
 }
 .corner-indicator.active {
-  .v-line, .h-line {
+  .v-line,
+  .h-line {
     background-color: $indicatorActiveColor;
   }
 }
@@ -49,13 +54,13 @@ $indicatorSpan: calc(100% - 80px);
   .v-line {
     top: 0px;
     left: 0px;
-    height:100%;
+    height: 100%;
     width: $indicatorThickness;
   }
   .h-line {
     top: 0px;
     left: 0px;
-    width:100%;
+    width: 100%;
     height: $indicatorThickness;
   }
 }
@@ -69,13 +74,13 @@ $indicatorSpan: calc(100% - 80px);
   .v-line {
     top: 0px;
     right: 0px;
-    height:100%;
+    height: 100%;
     width: $indicatorThickness;
   }
   .h-line {
     top: 0px;
     right: 0px;
-    width:100%;
+    width: 100%;
     height: $indicatorThickness;
   }
 }
@@ -89,13 +94,13 @@ $indicatorSpan: calc(100% - 80px);
   .v-line {
     bottom: 0px;
     right: 0px;
-    height:100%;
+    height: 100%;
     width: $indicatorThickness;
   }
   .h-line {
     bottom: 0px;
     right: 0px;
-    width:100%;
+    width: 100%;
     height: $indicatorThickness;
   }
 }
@@ -109,27 +114,28 @@ $indicatorSpan: calc(100% - 80px);
   .v-line {
     bottom: 0px;
     left: 0px;
-    height:100%;
+    height: 100%;
     width: $indicatorThickness;
   }
   .h-line {
     bottom: 0px;
     left: 0px;
-    width:100%;
+    width: 100%;
     height: $indicatorThickness;
   }
 }
 
-
-
-
-
-
-.left-indicator.active, .right-indicator.active, .top-indicator.active, .bottom-indicator.active {
+.left-indicator.active,
+.right-indicator.active,
+.top-indicator.active,
+.bottom-indicator.active {
   background-color: $indicatorActiveColor;
   z-index: 22;
 }
-.left-indicator, .right-indicator, .top-indicator, .bottom-indicator{
+.left-indicator,
+.right-indicator,
+.top-indicator,
+.bottom-indicator {
   pointer-events: none;
   transition: all 150ms linear;
   background-color: #00000040;
@@ -165,11 +171,6 @@ $indicatorSpan: calc(100% - 80px);
   left: 50%;
   transform: translateX(-50%);
 }
-
-
-
-
-
 
 .circle {
   width: 15px;
