Seperate WindowContent and WindowFooter so actions and content can be in same child component

--- a/client/src/packages/ReactWindows/Pages/Home/CreateWindow.scss
+++ b/client/src/packages/ReactWindows/Pages/Home/CreateWindow.scss
@@ -40,5 +40,9 @@
 
 .username-field {
   background-color: white;
-  color: black;
+  padding: 10px;
+}
+
+.username-field-input {
+  color: red;
 }
