--- a/client/src/packages/ReactWindows/Components/Containers/Windows/DragWindow/DragWindow.scss
+++ b/client/src/packages/ReactWindows/Components/Containers/Windows/DragWindow/DragWindow.scss
@@ -2,6 +2,18 @@
   pointer-events: none;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.relative {
+  position: relative;
+}
+
 .window-inner {
   padding: 0px;
   margin: 0px;
@@ -13,7 +25,7 @@
 .window {
   opacity: 1;
   transition: background-color 300ms linear;
-  background-color: #ffffff00;
+  background-color: #292929e3;
 }
 
 .window.blurred-bkgd,
