Add contentSize prop to ReactWindow children

--- a/client/src/packages/ReactWindows/Pages/Home/Home.scss
+++ b/client/src/packages/ReactWindows/Pages/Home/Home.scss
@@ -113,6 +113,10 @@ pre {
   justify-content: center;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
 .grow {
   display: flex;
   flex-grow: 1;
