Responsive nesting of components based on screen size

--- a/client/src/packages/ReactWindows/Components/SideBar/SideBar.scss
+++ b/client/src/packages/ReactWindows/Components/SideBar/SideBar.scss
@@ -12,6 +12,15 @@
   color: white;
 }
 
+.sidebar-footer {
+  width: 100%;
+  height: 75px;
+  .button {
+    width: 75px;
+    height: 100%;
+  }
+}
+
 .side-bar {
   background-color: black;
   color: white;
