Remember username / background

--- a/client/src/pages/Room/Components/Room.scss
+++ b/client/src/pages/Room/Components/Room.scss
@@ -2,6 +2,10 @@
   --bkgd-image: url(https://images.pexels.com/photos/101472/pexels-photo-101472.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 }
 
+.room-page {
+  background-color: black;
+}
+
 .window-host {
   z-index: 10;
 }
