--- a/client/src/pages/Room/Components/Windows/PlayerTurnWindow.scss
+++ b/client/src/pages/Room/Components/Windows/PlayerTurnWindow.scss
@@ -1,13 +1,9 @@
 .player-turn-notice {
-  background: rgb(34, 193, 195);
-  background: linear-gradient(
-    0deg,
-    rgba(34, 193, 195, 1) 0%,
-    rgba(253, 187, 45, 1) 100%
-  );
-
+  background: #007bd259;
+  background: linear-gradient(0deg, #007bd2bd 0%, #03127bbf 100%);
+  border: 3px double #00000087;
   h3 {
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 5vw;
   }
